--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "buildcss": "tailwindcss build src_styles.css -o public/styles.css"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "mongoose": "^5.10.12",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "tailwindcss": "^1.9.6"
   }
 }
