--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node app.js",
     "buildcss": "tailwindcss build src_styles.css -o public/styles.css"
   },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -19,5 +21,8 @@
     "morgan": "^1.10.0",
     "tailwindcss": "^1.9.6",
     "validator": "^13.1.17"
+  },
+  "engines": {
+    "node": "14.15.0"
   }
 }
