--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "start": "node app.js",
     "buildcss": "tailwindcss build src_styles.css -o public/styles.css"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
