--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "autoprefixer": "^10.2.1",
         "bcrypt": "^5.0.0",
         "cookie-parser": "^1.4.5",
         "dotenv": "^8.2.0",
@@ -19,7 +20,8 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.10.12",
         "morgan": "^1.10.0",
-        "tailwindcss": "^1.9.6",
+        "postcss": "^8.2.4",
+        "tailwindcss": "^2.0.2",
         "validator": "^13.1.17"
     },
     "engines": {
