--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node app.js",
+        "start": "nodemon app.js -e js,ejs",
         "buildcss": "tailwindcss build src_styles.css -o public/styles.css"
     },
     "keywords": [],
